--- a/roles/k8s_node/tasks/kubeconfigs_generated.yml
+++ b/roles/k8s_node/tasks/kubeconfigs_generated.yml
@@ -49,11 +49,11 @@
     command: cat {{ k8s__local_shared_dir }}/bootstrap_token
     delegate_to: 127.0.0.1
     register: _bootstrap_token
-    changed_when: False
+    changed_when: false
   - name: Check if bootstrap token is set in bootstrap kubeconfig
     command: cat {{ _kubeconfig }}
     register: _check_result
-    changed_when: False
+    changed_when: false
   - name: Bootstrap token is set in bootstrap kubeconfig
     command: kubectl config set-credentials kubelet-bootstrap --token={{ _bootstrap_token.stdout }} --kubeconfig={{ _kubeconfig }}
     when: not _bootstrap_token.stdout in _check_result.stdout
