--- a/roles/etcd/tasks/etcd_started.yml
+++ b/roles/etcd/tasks/etcd_started.yml
@@ -17,6 +17,6 @@
 - name: etcd is running
   systemd:
     name: etcd
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
