--- a/roles/k8s_master/tasks/clusterrole_for_proxy_created.yml
+++ b/roles/k8s_master/tasks/clusterrole_for_proxy_created.yml
@@ -4,12 +4,12 @@
   until: _componentstatuses.stdout.find('Unhealthy') == -1
   retries: 5
   delay: 5
-  changed_when: False
+  changed_when: false
 
 - name: ClusterRoleBinding 'kube-proxy:node-proxier' exists
   command: kubectl apply -f -
   args:
-    stdin : |
+    stdin: |
       apiVersion: rbac.authorization.k8s.io/v1
       kind: ClusterRoleBinding
       metadata:
