--- a/roles/k8s_master/tasks/kube_admin_user_exists.yml
+++ b/roles/k8s_master/tasks/kube_admin_user_exists.yml
@@ -4,7 +4,7 @@
     group:
       name: kube-admin
       gid: '{{ k8s_master__kube_admin_user_gid }}'
-      system: True
+      system: true
       state: present
   - name: User 'kube-admin' exists
     user:
