--- a/roles/k8s_master/tasks/kube_apiserver_started.yml
+++ b/roles/k8s_master/tasks/kube_apiserver_started.yml
@@ -33,6 +33,6 @@
 - name: kube-apiserver is running
   systemd:
     name: kube-apiserver
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
