--- a/roles/k8s_node/tasks/docker_installed.yml
+++ b/roles/k8s_node/tasks/docker_installed.yml
@@ -4,8 +4,8 @@
     description: ol7_addons
     baseurl: http://yum.oracle.com/repo/OracleLinux/OL7/addons/$basearch/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
-    gpgcheck: True
-    enabled: True
+    gpgcheck: true
+    enabled: true
 
 - name: docker-engine is installed
   yum:
@@ -28,6 +28,6 @@
 - name: dockerd is running
   systemd:
     name: docker
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
