--- a/roles/k8s_node/tasks/kube_proxy_started.yml
+++ b/roles/k8s_node/tasks/kube_proxy_started.yml
@@ -30,6 +30,6 @@
 - name: kube-proxy is running
   systemd:
     name: kube-proxy
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
