--- a/roles/k8s_node/tasks/kube_scheduler_started.yml
+++ b/roles/k8s_node/tasks/kube_scheduler_started.yml
@@ -17,6 +17,6 @@
 - name: kube-scheduler is running
   systemd:
     name: kube-scheduler
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
