--- a/roles/k8s_node/tasks/kubelet_started.yml
+++ b/roles/k8s_node/tasks/kubelet_started.yml
@@ -34,6 +34,6 @@
 - name: kubelet is running
   systemd:
     name: kubelet
-    daemon_reload: True
-    enabled: True
+    daemon_reload: true
+    enabled: true
     state: started
