--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -1,4 +1,4 @@
-etcd__etcd_version: 3.1.12
+etcd__etcd_version: v3.1.12
 etcd__etcd_archive_download_url_base: https://github.com/coreos/etcd/releases/download
 etcd__etcd_archive_checksum: sha1:5a97bd2421a55bd38ae8689d195f7d93aee3ec8e
 etcd__pki_dir: /etc/kubernetes/pki
