--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -2,6 +2,13 @@ k8s_node__k8s_bins_download_url_base: https://storage.googleapis.com/kubernetes-
 k8s_node__kubelet_bin_checksum: sha1:88e181532294abebb755c9495c75ef7b6af2edb5
 k8s_node__kube_proxy_bin_checksum: sha1:b1824394677e5e5760f609047bcc7aa3411e534d
 
+k8s_node__yum_repo_to_enable_for_docker:
+  name: ol7_addons
+  description: ol7_addons
+  baseurl: http://yum.oracle.com/repo/OracleLinux/OL7/addons/$basearch/
+  gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
+  gpgcheck: true
+k8s_node__docker_package_name: docker-engine
 k8s_node__docker_nofile: 1000000
 k8s_node__additional_dockerd_options:
 
@@ -17,32 +24,30 @@ k8s_node__kubeconfig_dir: /etc/kubernetes
 k8s_node__k8s_configs_dir: /etc/kubernetes
 k8s_node__pki_dir: /etc/kubernetes/pki
 
-k8s_node__kubelet_opts:
-  address: 0.0.0.0
-  cert_dir: '{{ k8s_node__pki_dir }}'
-  cni_bin_dir: /opt/cni/bin
-  cni_conf_dir: /etc/cni/net.d
-  cgroup_driver: cgroupfs
-  container_log_max_files: 5
-  container_log_max_size: 10Mi
-  fail_swap_on: true
-  healthz_bind_address: 127.0.0.1
-  healthz_port: 10248
-  max_open_files: '{{ k8s_node__docker_nofile + 10000 }}'
-  max_pods: 110
-  pod_infra_container_image: k8s.gcr.io/pause-amd64:3.1
-  rotate_certificates: 'true'
-  tls_cipher_suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-  tls_min_version: VersionTLS12
-  vlog_level: 2
+k8s_node__kubelet_address: 0.0.0.0
+k8s_node__kubelet_cert_dir: '{{ k8s_node__pki_dir }}'
+k8s_node__kubelet_cni_bin_dir: /opt/cni/bin
+k8s_node__kubelet_cni_conf_dir: /etc/cni/net.d
+k8s_node__kubelet_cgroup_driver: cgroupfs
+k8s_node__kubelet_container_log_max_files: 5
+k8s_node__kubelet_container_log_max_size: 10Mi
+k8s_node__kubelet_fail_swap_on: true
+k8s_node__kubelet_healthz_bind_address: 127.0.0.1
+k8s_node__kubelet_healthz_port: 10248
+k8s_node__kubelet_max_open_files: '{{ k8s_node__docker_nofile + 10000 }}'
+k8s_node__kubelet_max_pods: 110
+k8s_node__kubelet_pod_infra_container_image: k8s.gcr.io/pause-amd64:3.1
+k8s_node__kubelet_rotate_certificates: 'true'
+k8s_node__kubelet_tls_cipher_suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+k8s_node__kubelet_tls_min_version: VersionTLS12
+k8s_node__kubelet_vlog_level: 2
 k8s_node__kubelet_restart_sec: 10
 
-k8s_node__kube_proxy_opts:
-  bind_address: 127.0.0.1
-  enable_profiling: false
-  healthz_bind_address: 127.0.0.1:10256
-  metrics_bind_address: 127.0.0.1:10249
-  vlog_level: 2
+k8s_node__kube_proxy_bind_address: 127.0.0.1
+k8s_node__kube_proxy_enable_profiling: false
+k8s_node__kube_proxy_healthz_bind_address: 127.0.0.1:10256
+k8s_node__kube_proxy_metrics_bind_address: 127.0.0.1:10249
+k8s_node__kube_proxy_vlog_level: 2
 k8s_node__kube_proxy_restart_sec: 10
 
 k8s_node__kernel_params:
