--- a/roles/k8s_node/tasks/docker_installed.yml
+++ b/roles/k8s_node/tasks/docker_installed.yml
@@ -1,16 +1,17 @@
-- name: YUM repository 'ol7_addons' is enabled
+- name: YUM repository for Docker is enabled
   yum_repository:
-    name: ol7_addons
-    description: ol7_addons
-    baseurl: http://yum.oracle.com/repo/OracleLinux/OL7/addons/$basearch/
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
-    gpgcheck: true
+    name: '{{ k8s_node__yum_repo_to_enable_for_docker.name }}'
+    description: '{{ k8s_node__yum_repo_to_enable_for_docker.description }}'
+    baseurl: '{{ k8s_node__yum_repo_to_enable_for_docker.baseurl }}'
+    gpgkey: '{{ k8s_node__yum_repo_to_enable_for_docker.gpgkey }}'
+    gpgcheck: '{{ k8s_node__yum_repo_to_enable_for_docker.gpgcheck }}'
     enabled: true
+  when: k8s_node__yum_repo_to_enable_for_docker
 
-- name: docker-engine is installed
+- name: Docker is installed
   yum:
-    name: docker-engine
-    state: latest
+    name: '{{ k8s_node__docker_package_name }}'
+    state: present
 
 - name: DOCKER_NOFILE is set for k8s
   lineinfile:
