--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -5,7 +5,7 @@ k8s_master__kube_scheduler_bin_checksum: sha1:e3690e69db6f6dfa16e3bf2f77af2758a7
 k8s_master__kubectl_bin_checksum: sha1:a5c8e589bed21ec471e8c582885a8c9972a84da1
 k8s_master__kubeadm_bin_checksum: sha1:c66a5c0baf77f37534dbc1624c8bd19045726b68
 
-k8s_master__service_ip_addr: 10.0.0.1
+k8s_master__service_ip_addr: '{{ k8s__service_cluster_ip_range | ipaddr("1") | regex_replace("/[0-9]+", "") }}'
 
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
