--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -33,6 +33,7 @@ k8s_master__kube_apiserver_insecure_port: 0
 k8s_master__kube_apiserver_kubelet_preferred_address_types: InternalIP,ExternalIP,Hostname
 k8s_master__kube_apiserver_kubernetes_service_node_port: 0
 k8s_master__kube_apiserver_profiling: 'false'
+k8s_master__kube_apiserver_repair_malformed_updates: 'false'
 k8s_master__kube_apiserver_service_node_port_range: '30000-32767'
 k8s_master__kube_apiserver_tls_cipher_suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 k8s_master__kube_apiserver_tls_min_version: VersionTLS12
