--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -5,11 +5,11 @@ etcd__pki_dir: /etc/kubernetes/pki
 etcd__peer_port: 2380
 
 etcd__data_dir: /var/lib/etcd
-etcd__listen_client_urls: https://{{ host__ip_addr }}:{{ host__etcd_server_port }}
-etcd__advertise_client_urls: https://{{ host__ip_addr }}:{{ host__etcd_server_port }}
-etcd__listen_peer_urls: https://{{ host__ip_addr }}:{{ etcd__peer_port }}
-etcd__initial_advertise_peer_urls: https://{{ host__ip_addr }}:{{ etcd__peer_port }}
+etcd__listen_client_urls: https://{{ ansible_facts.default_ipv4.address }}:{{ host__etcd_server_port }}
+etcd__advertise_client_urls: https://{{ ansible_facts.default_ipv4.address }}:{{ host__etcd_server_port }}
+etcd__listen_peer_urls: https://{{ ansible_facts.default_ipv4.address }}:{{ etcd__peer_port }}
+etcd__initial_advertise_peer_urls: https://{{ ansible_facts.default_ipv4.address }}:{{ etcd__peer_port }}
 etcd__cluster_token: '{{ k8s__k8s_cluster_name }}_8198f9e6ac'
-etcd__initial_cluster_url: https://{{ host__ip_addr }}:{{ etcd__peer_port }}
+etcd__initial_cluster_url: https://{{ ansible_facts.default_ipv4.address }}:{{ etcd__peer_port }}
 etcd__max_wals: 0
 etcd__restart_sec: 10
